tests/fixtures/invalid/array_negative_index.c
int main() {
    int values[2];
    values[-1] = 3;
    return values[0];
}
